<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hda.fbi.nzse.sose22.iamsafe.ContactsFragment">

    <LinearLayout
        android:id="@+id/linearlayout_contacts_listlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal_layout_recyclerview"
        tools:layout_editor_absoluteX="@dimen/editor_absoluteX_recyclerView"
        tools:layout_editor_absoluteY="@dimen/editor_absoluteY_recyclerView">

        <TextView
            android:id="@+id/textview_contacts_markedassafecontacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="0"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/layout_margin_top_recyclerview"
            android:textColor="@color/black"
            android:text="@string/contact_marked_safe"
            android:textSize="@dimen/textSize_all_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_contacts_markedassafecontactlist"
            android:layout_weight="1.5"
            android:contentDescription="@string/contacts_recyclerview_markedassafedescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/textview_contacts_unkownstatuscontacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/layout_margin_top_recyclerview"
            android:textSize="@dimen/textSize_all_text"
            android:textColor="@color/black"
            android:paddingTop="@dimen/padding_top_recyclerview"
            android:text="@string/contact_marked_unknown" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_contacts_unkownstatuscontactslist"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/contacts_recyclerview_unknownstatusdescription"
            android:paddingBottom="@dimen/padding_bottom_recyclerview"
            android:layout_height="0dp"
            android:paddingTop="@dimen/padding_top_recyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingactionbutton_contacts_addcontact"
        android:layout_width="@dimen/layout_width_recylerview_floating_button"
        android:layout_height="@dimen/layout_height_recylerview_floating_button"
        android:layout_margin="@dimen/layout_margin_recyclerview_floating_button"
        android:background="@color/black"
        android:backgroundTint="@color/cyan_100"
        android:contentDescription="@string/contacts_invite_button_description"
        android:src="@drawable/ic_add_contact_24dp"
        app:tint="@color/cyan_500"
        app:backgroundTint="@color/cyan_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>