<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hda.fbi.nzse.sose22.iamsafe.LoginActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/image_forgotpassword_iamsafelogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constrainedlayout_forgotpassword_belowlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/iamsafe_icon">

    </androidx.constraintlayout.utils.widget.ImageFilterView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainedlayout_forgotpassword_belowlogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_forgotpassword_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_forgotpassword_iamsafelogo"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_forgotpassword_emailaddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart_all"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/layout_marginEnd_all"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/cornerRadius_all_text"
            app:boxCornerRadiusBottomStart="@dimen/cornerRadius_all_text"
            app:boxCornerRadiusTopEnd="@dimen/cornerRadius_all_text"
            app:boxCornerRadiusTopStart="@dimen/cornerRadius_all_text"
            app:boxStrokeColor="@color/cyan_600"
            app:boxStrokeWidth="@dimen/strokeWidth_all_button"
            android:hint="@string/popupForgotPassword_emailHint"
            app:layout_constraintBottom_toTopOf="@+id/button_forgotpassword_sendmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_forgotpassword_emailaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/popupForgotPassword_emailHint"
                android:textColorHint="@color/black"
                android:singleLine="true"
                android:textColor="@color/cyan_600"
                app:boxStrokeColor="@color/cyan_600" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgotpassword_sendmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_all_button"
            android:layout_marginStart="@dimen/layout_marginStart_all"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/layout_marginEnd_all"
            android:backgroundTint="@color/cyan_600"
            android:fontFamily="@font/inter"
            android:hint="@string/popupForgotPassword_sendEmailHint"
            android:importantForAccessibility="yes"
            android:text="@string/popupForgotPassword_sendEmail"
            android:textColor="@color/cyan_100"
            android:textSize="@dimen/textSize_all_button"
            app:cornerRadius="@dimen/cornerRadius_all_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_forgotpassword_emailaddress"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="@color/cyan_100_condensed"
            app:strokeColor="@color/cyan_100"
            app:strokeWidth="@dimen/strokeWidth_all_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgotpassword_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_all_button"
        android:layout_marginStart="@dimen/layout_marginStart_all"
        android:layout_marginEnd="@dimen/layout_marginEnd_all"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/cyan_600"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/inter"
        android:hint="@string/popupForgotPassword_cancelHint"
        android:importantForAccessibility="yes"
        android:text="@string/popupForgotPassword_cancel"
        android:textColor="@color/cyan_100"
        android:textSize="@dimen/textSize_all_button"
        app:cornerRadius="@dimen/cornerRadius_all_button"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrainedlayout_forgotpassword_belowlogo"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/delete_button_color"
        app:strokeColor="@color/cyan_100"
        app:strokeWidth="@dimen/strokeWidth_all_button" />

</androidx.constraintlayout.widget.ConstraintLayout>

